<resources>
    <string name="app_name">RentRight</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="find_your_perfect_home">Find Your Perfect Home</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="remember_me">remember me</string>
    <string name="forgot_password">forgot password</string>
    <string name="do_not_have_account_sign_up">Do not have account? Sign up</string>
    <string name="this_is_a_custom_toast">This is a custom toast!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_your_dream_place_to_live">Discover your dream place to live</string>
    <string name="find_your_perfect_stay">Find Your Perfect Stay</string>
    <string name="empty">empty</string>
    <string name="home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Log out</string>
</resources>